# esp32_mqtt_panel

./: CMakeLists.txt  index.html  sdkconfig
docs/: app.js
main/: CMakeLists.txt  esp32_mqtt_panel.c
